tests/fixtures/invalid/str_bitxor_dict.py
# Cannot bitwise XOR Str and Dict[str, int]
x: str = "hello" ^ {"a": 1}
